--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
-
+	<meta name="description" content="Sam Sauer a Frontend Webdeveloper based near Frankfurt, Germany">
 	<title>Svelte app</title>
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
